# http_server

./: Cargo.toml  README.md
docs/: convert_mime_types.py  mimetypes.xml
root/: bad_request.html  index.html  info.txt  method_not_allowed.html  not_found.html  simple.html
root/pdf/: index.htm
src/: args.rs  basic_auth.rs  folder_operations.rs  generate_headers.rs  header_parser.rs  http_parser.rs  http_struct.rs  lib.rs  main.rs  mime_type_map.rs  string_operations.rs
