[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
fancy-regex = "0.10.0"
phf = { version = "0.11", features = ["macros"] }
lazy_static = "1.4.0"
linked-hash-map = "0.5.6"
